# SpotMicro-Inspired-Quadruped-Robot-AI-Club-UIT

./: .gitignore  .gitmodules
src/: setup.bash
src/autoscirpts/: run_all.sh
src/catkin_ws/src/docs/: servo_calibration_spreadsheet.ods
src/catkin_ws/src/ros_i2s_mic/: CMakeLists.txt  package.xml
src/catkin_ws/src/ros_i2s_mic/src/: i2s_wav_node.py  mic_node.py  record_i2s_wav.py
src/catkin_ws/src/servo_move_keyboard/scripts/: servoMoveKeyboard.py
src/catkin_ws/src/spot_keyword_spotting/: CMakeLists.txt  README.md  package.xml
src/catkin_ws/src/spot_keyword_spotting/ scripts/: model.py
src/catkin_ws/src/spot_keyword_spotting/config/: config.yml
src/catkin_ws/src/spot_keyword_spotting/keyword_spotting/native/include/: ringbuffer.hpp  spectrogram.hpp
src/catkin_ws/src/spot_keyword_spotting/keyword_spotting/native/src/: bindings.cpp  preprocess.cpp  ringbuffer.cpp
src/catkin_ws/src/spot_keyword_spotting/keyword_spotting/weights/: checkpoint.keras  checkpoint.onnx  checkpoint.tflite
src/catkin_ws/src/spot_keyword_spotting/msg/: VoiceCommand.msg
src/catkin_ws/src/spot_keyword_spotting/scripts/: i2s_raw_audio_publisher.py  i2s_voice_node.py  i2s_window_node.py  infer_wav.py  model.py  raw_audio_subscriber.py  voice_node.py  window_infer_node.py
src/catkin_ws/src/spot_keyword_spotting/src/: i2s_window_node.cpp
src/catkin_ws/src/spot_keyword_spotting/test/: test_ringbuffer.py
src/catkin_ws/src/spot_micro_joy/scripts/: spotMicroJoystickMove.py
src/catkin_ws/src/spot_micro_launch/: CMakeLists.txt
src/catkin_ws/src/spot_micro_motion_cmd/config/: spot_micro_motion_cmd.yaml
src/other_scirpts/keyword_spotting/: convert_onnx2tf.py
(+2 files in other folders)
